# eclipse-os

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  GNUmakefile  LICENSE  Makefile  README.md  build.sh  cargo.toml  express_script_docs.md  limine.conf  run.sh  video_buffer.rs
.cargo/: config.toml
.github/workflows/: image.yml  rust.yml
ahci/: Cargo.toml
ahci/src/: lib.rs
art/: water.ppm
bare_x86_64/: Cargo.toml
bare_x86_64/src/: lib.rs
bare_x86_64/src/cpu/: apic.rs  cpu_types.rs  mod.rs  msr.rs
eclipse_ahci/: Cargo.toml
eclipse_ahci/src/: lib.rs  types.rs
eclipse_framebuffer/: Cargo.toml  README.md
eclipse_framebuffer/src/: lib.rs
eclipse_fs/: Cargo.toml  LICENSE  README.md
eclipse_fs/src/: bitmap.rs  block_io.rs  directory.rs  file_ops.rs  inodes.rs  lib.rs  super_block.rs  write_block.rs
eclipse_ide/: Cargo.toml
eclipse_ide/src/: lib.rs
eclipse_pci/: Cargo.toml
eclipse_pci/src/: lib.rs
eclipse_x86_64_commands/: Cargo.toml
eclipse_x86_64_commands/src/: lib.rs
esp/efi/boot/: bootx64.efi
ide/: Cargo.toml
ide/src/: lib.rs
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml  GNUmakefile  build.rs  kernel
kernel/src/: allocator.rs  commands.rs  framebuffer.rs  gdt.rs  idt.rs  lib.rs  main.rs
kernel/src/drivers/: pci.rs
kernel/src/mem/: mem.rs  mod.rs  vmm.rs
output/: eclipse_os.efi
pci/: Cargo.toml
pci/src/: lib.rs
src/: allocator.rs  bump_allocator.rs  coms.rs  gdt.rs  handle_editor.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pc_speaker.rs  rtc.rs  serial.rs  shutdown.rs  sounds.rs  time.rs  uefi_text_buffer.rs  vga_buffer.rs  video_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/compiler/: lexer.rs  lexer_test.rs
src/cpu/: cpuid.rs  gdt.rs  mod.rs
src/crude_storage/: crude_storage.rs  mod.rs
src/express/: express_editor.rs  mod.rs
src/fs/: device.rs  disk_list.rs  disk_list_text.rs  ext4.rs  fat32.rs  list_disks.rs  mod.rs  structures.rs
src/fs/afs/: mod.rs
src/fs/ext2/: blockgroup.rs  entry.rs  inode.rs  mod.rs  superblock.rs
src/fs/ustar/: mod.rs
src/intereperter/: lexer_proposal.rs  mod.rs  run.rs
src/intereperter/components/: env.rs  mod.rs  ops.rs  parser.rs  tokens.rs
src/interperter/: lexer.rs  lexer_proposal.rs  mod.rs
src/shell/: commands.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/text_editor/: express_editor.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
