[package]
name = "eclipse_os"
version = "0.1.0"
authors = [""]
edition = "2024"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
volatile = "0.5.3"
spin = { version = "0.10.0", default-features = false, features = ["mutex", "once", "spin_mutex"] }
uart_16550 = "0.3.2"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10"
libm = "0.2.6"
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
uefi = "0.35.0"
heapless = "0.8.0"
once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "critical-section"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
