[workspace]
members = ["eclipse_ahci","eclipse_framebuffer", "eclipse_fs", "eclipse_ide", "eclipse_pci", "eclipse_x86_64_commands","kernel"]
resolver = "2"

[workspace.dependencies]
x86_64 = "0.15.2"
limine = "0.5.0"
uart_16550 = "0.4.0"
spin = "0.10.0"

# Eclipse crates
eclipse_ahci = { path = "./eclipse_ahci" }
eclipse_framebuffer = { path = "./eclipse_framebuffer" }
eclipse_ide = { path = "./eclipse_ide" }
eclipse_pci = { path = "./eclipse_pci" }
eclipse_x86_64_commands = { path = "./eclipse_x86_64_commands" }
eclipse_fs ={ path = "./eclipse_fs" }
