[workspace]
members = ["ahci","eclipse_framebuffer", "eclipse_fs", "ide", "pci", "kernel","eclipse_threader", "bare_x86_64"]
resolver = "2"

[workspace.dependencies]
x86_64 = "0.15.2"
limine = "0.5.0"
uart_16550 = "0.4.0"
spin = "0.10.0"

# Eclipse crates
ahci = { path = "./ahci" }
eclipse_framebuffer = { path = "./eclipse_framebuffer" }
ide = { path = "./ide" }
pci = { path = "./pci" }
bare_x86_64 = { path = "./bare_x86_64" }
eclipse_fs ={ path = "./eclipse_fs" }
eclipse_threader = { path = "./eclipse_threader" }
