[package]
name = "eclipse_os"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = { workspace = true}
x86_64 = { workspace = true}
uart_16550 = { workspace = true }
luminal_rt = { workspace = true }
eclipse_framebuffer = { workspace = true }
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.2.43"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
